# SFML-Platformer

./: .gitignore  CMakeLists.txt  Camera.cpp  Camera.h  Layout.h  Level.cpp  Level.h  Main.cpp  Map.cpp  Map.h  Player.cpp  Player.h  PlayerInfo.h  README.md  SFML-Platformer.sln  SFML-Platformer.vcxproj  SFML-Platformer.vcxproj.filters  build.cmd  config.csv
Client/: .gitignore  CMakeLists.txt  Client.cpp  Client.vcxproj  Client.vcxproj.filters  Inputs.h  config.csv
Client/Game/: Game.cpp  Game.h  Map.cpp  Map.h  Player.cpp  Player.h  PlayerControls.h
Client/Layout/: Button.cpp  Button.h  CMakeLists.txt  Layout.h  UpdateCode.h  updateCodes.h
Client/Layout/Level/: CMakeLists.txt  Camera.cpp  Camera.h  Level.cpp  Level.h  Map.cpp  Map.h  Player.cpp  Player.h  playerControls.h
Client/Layout/Menu/: CMakeLists.txt  Menu.cpp  Menu.h
Client/Layout/PauseMenu/: CMakeLists.txt  PauseMenu.cpp  PauseMenu.h
Client/Maps/: map3.tmx  map5.csv  map5.json  map5.tmx  mapSheet.tsx
Client/Test/: TestGame.cpp  TestGame.h
Client/Textures/: Player64X128.psd  exitButton.psd  mapSheet32.psd  startButton.psd
Layout/: Button.cpp  Button.h  Layout.h  updateCodes.h
Layout/Level/: Level.cpp  Level.h  Map.cpp  Map.h  Player.cpp  Player.h  playerControls.h
Layout/Menu/: Button.cpp  Button.h  Menu.cpp  Menu.h
Layout/PauseMenu/: PauseMenu.cpp  PauseMenu.h
Maps/: map.txt  map2.tmx  map2.txt  map3.txt  map4.tmx  map4.txt  mapSheet32.tsx
PerfomanceTest/: launchMultipleCopies.py
Server/: CMakeLists.txt  Common.h  NetworkLibrary.h  Server.cpp  Server.vcxproj  Server.vcxproj.filters
ServerLinux/: CMakeLists.txt  NetworkLibrary.h
Textures/: map2.json  pause.psd
